fix layout broken

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -56,7 +56,7 @@
   }
 
   .category {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     width: 150px;
