--- a/src/components/Pages/pages.css
+++ b/src/components/Pages/pages.css
@@ -1,10 +1,10 @@
 .wrapper {
   flex: 1;
+  width: 100%;
   min-height: calc(100vh - 85px);
 }
 
 .items {
-  width: 800px;
   margin: 10px auto 0 auto;
   padding: 20px;
 
@@ -17,7 +17,7 @@
 .item {
   display: flex;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 120px;
   font-size: 30px;
   border: 1px solid #e9e9e9;
